@@ -1,3 +1,8 @@
+2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>
+
+	* mm-url.el (mm-url-encode-multipart-form-data):
+	Restore to handle "multipart/form-data" by eww.
+
 2014-11-07  Tassilo Horn  <tsdh@gnu.org>
 
 	* gnus-start.el (gnus-activate-group): Fix typo reported by Tim
